- G.723.1 demuxer and decoder
- RTMPE protocol support
- RTMPTE protocol support
- Canopus Lossless Codec decoder
- avconv -shortest option is now per-output file,
  -pass and -passlogfile are now per-output stream
- Ut Video encoder
- Microsoft Screen 2 decoder
- RTP depacketization of JPEG
- Smooth Streaming live segmenter muxer
- RTP packetization of JPEG


version 0.8:

- GSM audio parser
- SMJPEG muxer


version 0.8_beta2:

- Automatic thread count based on detection number of (available) CPU cores
- Deprecate libpostproc. If desired, the switch --enable-postproc will
  enable it but it may be removed in a later Libav release.
- rv34: frame-level multi-threading
- optimized iMDCT transform on x86 using SSE for for mpegaudiodec


version 0.8_beta1:

- BWF muxer
- Flash Screen Video 2 decoder
- ffplay/ffprobe/ffserver renamed to avplay/avprobe/avserver
- ffmpeg deprecated, added avconv, which is almost the same for now, except
for a few incompatible changes in the options, which will hopefully make them
easier to use. The changes are:
    * The options placement is now strictly enforced! While in theory the
      options for ffmpeg should be given in [input options] -i INPUT [output
      options] OUTPUT order, in practice it was possible to give output options
      before the -i and it mostly worked. Except when it didn't - the behavior was
      a bit inconsistent. In avconv, it is not possible to mix input and output
      options. All non-global options are reset after an input or output filename.
    * All per-file options are now truly per-file - they apply only to the next
      input or output file and specifying different values for different files
      will now work properly (notably -ss and -t options).
    * All per-stream options are now truly per-stream - it is possible to
      specify which stream(s) should a given option apply to. See the Stream
      specifiers section in the avconv manual for details.