@@ -49,6 +49,7 @@ version <next>:
 - RTP depacketization of JPEG
 - Smooth Streaming live segmenter muxer
 - RTP packetization of JPEG
+- Opus decoder using libopus
 
 
 version 0.8:
